# advent-of-code

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: const.py
src/day1/: trebuchet1.py  trebuchet2.py
src/day2/: cubes1.py  cubes2.py
src/day3/: engine1.py  engine2.py
src/day4/: scratchcards1.py  scratchcards2.py
src/day6/: boat_race1.py  boat_race2.py
