[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Patryk Wójtowicz <patryk.zbigniew.wojtowicz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
jupyter = "^1.0.0"
black = "^23.11.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
