[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Patryk Wójtowicz <patryk.zbigniew.wojtowicz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
jupyter = "^1.0.0"
black = "^23.11.0"
pytest = "^7.4.3"
numpy = "^1.26.2"
pandas = "^2.1.4"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
